titan/tests/ui/reference_not_allowed.rs
use titan::SharedMemorySafe;

#[derive(SharedMemorySafe)]
#[repr(C)]
struct HasReference {
    data: &'static u32,
}

fn main() {}
